Fix bulk get jetton balance
